work on small issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,12 +43,12 @@ header {
     margin-top: 20px;
 }
 
-.topnav {
+.navtop {
     background-color: #444;
     overflow: hidden;
 }
 
-.topnav a {
+.navtop a {
     float: left;
     display: block;
     color: white;
@@ -57,7 +57,7 @@ header {
     text-decoration: none;
 }
 
-.topnav a:hover {
+.navtop a:hover {
     background-color: #555;
     color: #ff6600;
 }
